# sentiric-telephony-action-service

./: .context.md  .env.example  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  TASKS.md  TEST.md  debug_client.go  docker-compose.network.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  docker-publish.yml
cmd/telephony-action-service/: main.go
internal/client/: grpc_client.go
internal/config/: config.go
internal/logger/: logger.go
internal/server/: grpc.go
internal/service/: mediator.go  pipeline.go
src/: app.rs  config.rs  main.rs  telemetry.rs
src/clients/: media_client.rs  mod.rs
src/pubsub/: ghost_publisher.rs  mod.rs
src/server/: grpc.rs  http.rs
