[package]
name = "sentiric-telephony-action-service"
version = "1.0.14"
edition = "2021"
authors = ["Sentiric Architecture Team"]
description = "Telephony Action Service for Sentiric Platform"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
axum = "0.7"
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
bytes = "1.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
hostname = "0.3"

dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
lapin = "2.3"

# Dependency Updates for Core Fixes
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.20.4" }
sentiric-ai-pipeline-sdk = { git = "https://github.com/sentiric/sentiric-ai-pipeline-sdk.git", tag = "v0.1.9" }